@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 4951733 6402062
  * @summary Tests Font encoding
- * @run main/othervm -Djava.security.manager=allow java_awt_Font
+ * @run main/othervm java_awt_Font
  * @author Sergey Malenkov
  */
 
@@ -36,7 +36,7 @@ import java.util.Map;
 
 public final class java_awt_Font extends AbstractTest<Font> {
     public static void main(String[] args) {
-        new java_awt_Font().test(true);
+        new java_awt_Font().test();
     }
 
     protected Font getObject() {
