@@ -25,8 +25,7 @@
  * @test
  * @modules java.base/jdk.internal.foreign
  * @run testng TestLinker
- * @run testng/othervm/policy=security.policy
- *          -Djava.security.manager=default TestLinker
+ * @run testng/othervm TestLinker
  */
 
 import jdk.internal.foreign.CABI;
