@@ -81,7 +81,6 @@ public class ResourcesTest {
             = executeTestJava("--module-path", MODS_DIR.toString(),
                               "--add-modules", "m1,m2",
                               "-cp", CLASSES_DIR.toString(),
-                              "-Djava.security.manager=allow",
                               "Main")
                 .outputTo(System.out)
                 .errorTo(System.out)
