@@ -29,7 +29,6 @@
  * @library /test/lib ..
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestKeyGenerator
- * @run main/othervm -Djava.security.manager=allow TestKeyGenerator sm
  */
 
 import java.security.InvalidParameterException;
