@@ -30,7 +30,6 @@
  * @key randomness
  * @modules jdk.crypto.cryptoki
  * @run main/othervm ByteBuffers
- * @run main/othervm -Djava.security.manager=allow ByteBuffers sm
  */
 
 import java.nio.ByteBuffer;
