@@ -30,7 +30,6 @@
  * @library ../../../../java/security/testlibrary
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestECDH
- * @run main/othervm -Djava.security.manager=allow TestECDH sm policy
  */
 
 import java.security.KeyFactory;
