@@ -31,8 +31,6 @@
  * @modules jdk.crypto.cryptoki
  * @build jdk.test.lib.RandomFactory
  * @run main/othervm -Djava.security.debug=sunpkcs11 TestKeyPairGenerator
- * @run main/othervm -Djava.security.manager=allow -Djava.security.debug=sunpkcs11 TestKeyPairGenerator
- *                                                   sm TestKeyPairGenerator.policy
  * @key randomness
  */
 
