@@ -27,7 +27,7 @@
  * @summary Ensure that security messages can be formatted during system class
  *   loader initialization.
  * @build CustomClassLoader
- * @run main/othervm/java.security.policy=error.policy -Djava.security.manager -Djava.system.class.loader=CustomClassLoader BootMessages
+ * @run main/othervm -Djava.system.class.loader=CustomClassLoader BootMessages
  */
 
 public class BootMessages {
